--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,6 @@ project(CPPSmartFileOrganizer)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(CPPSmartFileOrganizer main.cpp)
+add_executable(CPPSmartFileOrganizer main.cpp
+        src/FileEntry.cpp
+        include/FileEntry.hpp)
