--- a/ui/CMakeLists.txt
+++ b/ui/CMakeLists.txt
@@ -1,14 +1,21 @@
-# Qt user interface executable
-
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
 set(CMAKE_AUTOUIC ON)
 
-add_executable(SmartFileOrganizerUI main.cpp)
+find_package(Qt6 REQUIRED COMPONENTS Quick QuickControls2 QuickDialogs2)
 
-# Link against core library and Qt
+qt_add_executable(SmartFileOrganizerUI main.cpp)
+
+qt_add_qml_module(SmartFileOrganizerUI
+        URI SmartFileOrganizer
+        VERSION 1.0
+        QML_FILES
+        qml/Main.qml
+)
+
 target_link_libraries(SmartFileOrganizerUI PRIVATE
         core
         Qt6::Quick
-        Qt6::Widgets
+        Qt6::QuickControls2
+        Qt6::QuickDialogs2
 )
